<resources>
    <string name="app_name">DoAlarm</string>
    <string name="alert">alert</string>
    <string name="alert_mode">Alert Mode</string>
    <string name="closedoor">closedoor</string>
    <string name="opendoor">opendoor</string>
    <string name="alertmessage">alertmessage</string>
    <string name="night_mode">Night Mode</string>
    <string name="front_door">Front Door</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="colon">:</string>
    <string name="start">set up</string>
    <string name="back_door">Back Door</string>
    <string name="window">Window</string>
    <string name="default_value">default</string>
    <string name="red">red</string>
    <string name="blue">blue</string>
</resources>

